[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-racket"
description = "Racket grammar for tree-sitter"
version = "0.21.0"
keywords = ["incremental", "parsing", "tree-sitter", "racket"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "6cdh", email = "cd6cdh@gmail.com" },
]
requires-python = ">=3.8"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/6cdh/tree-sitter-racket"

[project.optional-dependencies]
core = ["tree-sitter~=0.20"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"